test/runnable/ptrtest.nt
module ptrtest;

macro import std.macro.assert;

void main() {
    mut int i = 0;
    setPtr(&i, 5);
    assert(i == 5);
}

void setPtr(int* ip, int value) {
    *ip = value;
}
