test/fail_compilation/named_arg.nt
module named_arg;

void foo(int i) { }

void main() {
    foo(j=1);
}
